--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(D\:\\Program Files\\gradle-5.2.1))
-connection.project.dir=
+connection.project.dir=../game-tower-play
 eclipse.preferences.version=1
 gradle.user.home=D\:/Program Files/env/gradle
 java.home=C\:/Program Files/Java/jre1.8.0_191
